--- a/css/style.css
+++ b/css/style.css
@@ -675,6 +675,296 @@ footer {
     font-size: 28px;
   }
 }
+.pricing .container h1 {
+  margin-left: 410px;
+}
+.pricing .container h1 p {
+  font-size: 30px;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  color: var(--Dark-blue, #282938);
+  width: 462px;
+  line-height: 28px;
+}
+.pricing .container h1 span {
+  margin-left: 37px;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 64px;
+}
+.pricing .card-item {
+  width: 280px;
+  padding: 50px;
+  height: 500px;
+  border-radius: 12px;
+  background: var(--Grey, #F4F6FC);
+}
+.pricing .p {
+  font-size: 16px;
+  font-style: normal;
+  color: var(--Dark-blue, #282938);
+  font-weight: 500;
+  line-height: 28px;
+}
+.pricing .photo {
+  margin-left: -22px;
+  position: absolute;
+}
+.pricing .phot {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 35px;
+}
+.pricing .pho {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 69px;
+}
+.pricing .ph {
+  position: absolute;
+  margin-top: 104px;
+  margin-left: -22px;
+}
+.pricing .f {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 137px;
+}
+.pricing .card-item:hover {
+  background: #1C1E53;
+}
+.pricing .card-item:hover p {
+  color: #fff;
+}
+.pricing .card-item:hover span {
+  color: #fff;
+}
+.pricing .card-item:hover .spans {
+  color: var(--Yellow, #FCD980);
+}
+.pricing .card-item:hover .button {
+  color: #282938;
+  background-color: var(--Yellow, #FCD980);
+}
+.pricing .spans {
+  color: #282938;
+  font-size: 13px;
+  color: var(--Royal-Blue, #2405F2);
+}
+.pricing .spanssd {
+  font-size: 24px;
+  color: #282938;
+}
+.pricing .button {
+  background-color: #282938;
+  border-radius: 41px;
+  color: #fff;
+  padding: 12px;
+  width: 160px;
+  margin-left: 56px;
+  margin-top: 72px;
+}
+.pricing .card-items {
+  width: 280px;
+  padding: 20px;
+  height: 500px;
+  border-radius: 12px;
+  background: var(--Grey, #F4F6FC);
+}
+.pricing .ps {
+  font-size: 16px;
+  font-style: normal;
+  color: var(--Dark-blue, #282938);
+  font-weight: 500;
+  line-height: 28px;
+}
+.pricing .photos {
+  margin-left: -22px;
+  position: absolute;
+}
+.pricing .phots {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 35px;
+}
+.pricing .phos {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 69px;
+}
+.pricing .phs {
+  position: absolute;
+  margin-top: 104px;
+  margin-left: -22px;
+}
+.pricing .fs {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 137px;
+}
+.pricing .card-items:hover {
+  background: #1C1E53;
+}
+.pricing .card-items:hover p {
+  color: #fff;
+}
+.pricing .card-items:hover span {
+  color: #fff;
+}
+.pricing .card-items:hover .spanss {
+  color: var(--Yellow, #FCD980);
+}
+.pricing .card-items:hover .buttons {
+  color: #282938;
+  background-color: var(--Yellow, #FCD980);
+}
+.pricing .spanss {
+  color: #282938;
+  font-size: 13px;
+  color: var(--Royal-Blue, #2405F2);
+}
+.pricing .spansss {
+  font-size: 23px;
+}
+.pricing .buttons {
+  background-color: #282938;
+  border-radius: 41px;
+  color: #fff;
+  padding: 12px;
+  width: 160px;
+  margin-left: 56px;
+  margin-top: 42px;
+}
+.pricing .card-itemsw {
+  width: 280px;
+  padding: 20px;
+  height: 500px;
+  border-radius: 12px;
+  background: var(--Grey, #F4F6FC);
+}
+.pricing .psw {
+  font-size: 16px;
+  font-style: normal;
+  color: var(--Dark-blue, #282938);
+  font-weight: 500;
+  line-height: 28px;
+}
+.pricing .photosw {
+  margin-left: -22px;
+  position: absolute;
+}
+.pricing .photsw {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 35px;
+}
+.pricing .phosw {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 69px;
+}
+.pricing .phsw {
+  position: absolute;
+  margin-top: 104px;
+  margin-left: -22px;
+}
+.pricing .fsw {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 137px;
+}
+.pricing .card-itemsw:hover {
+  background: #1C1E53;
+}
+.pricing .card-itemsw:hover p {
+  color: #fff;
+}
+.pricing .card-itemsw:hover span {
+  color: #fff;
+}
+.pricing .card-itemsw:hover .spanssw {
+  color: var(--Yellow, #FCD980);
+}
+.pricing .card-itemsw:hover .buttonsw {
+  color: #282938;
+  background-color: var(--Yellow, #FCD980);
+}
+.pricing .spanssw {
+  color: #282938;
+  font-size: 13px;
+  color: var(--Royal-Blue, #2405F2);
+}
+.pricing .spansssw {
+  font-size: 23px;
+}
+.pricing .buttonsw {
+  background-color: #282938;
+  border-radius: 41px;
+  color: #fff;
+  padding: 12px;
+  width: 160px;
+  margin-left: 56px;
+  margin-top: 42px;
+}
+.pricing .fsww {
+  position: absolute;
+  margin-left: -22px;
+  margin-top: 170px;
+}
+.pricing .card ul li {
+  overflow: hidden;
+}
+.pricing .card ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+.pricing .mini-container {
+  width: 1105px;
+  margin-left: 117px;
+}
+.pricing .mini-h2 {
+  width: 256px;
+  font-size: 33px;
+}
+.pricing .mini-h2 p {
+  color: #2405F2;
+  font-size: 18px;
+}
+.pricing .mini-item {
+  width: 700px;
+  margin-left: 400px;
+  margin-top: -150px;
+}
+.pricing .ix {
+  transform: rotate(135deg);
+  margin-left: 650px;
+  margin-top: 20px;
+  position: absolute;
+}
+.pricing .ixs {
+  position: absolute;
+  margin-left: 650px;
+  margin-top: 15px;
+}
+.pricing .ixss {
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 650px;
+}
+.pricing .ixsss {
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 650px;
+}
+.pricing .ixssss {
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 650px;
+}
+
 .contact {
   padding: 80px 0;
   display: flex;
