--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
 @font-face {
   font-display: swap;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/poppins-v20-latin-regular.woff2") format("woff2");
 }
+
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins";
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Poppins';
 }
 
 body, html {
   padding-top: 46px;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   overflow-x: hidden;
 }
 
@@ -49,62 +51,93 @@ li {
   width: 100%;
   background-color: #1C1E53;
   height: 92px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 99;
 }
 
 .navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .navbar_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 40px;
 }
+
 .navbar_link {
   color: #BBBBCB;
   font-size: 16px;
   font-weight: 500;
   line-height: 28px;
 }
+
 .navbar_link:hover {
   color: #ffffff;
 }
+
 .navbar_btn {
   padding: 14px 48px;
-  border: 2px solid rgba(244, 246, 252, 0.2);
+  border: 2px solid #F4F6FC33;
   border-radius: 40px;
   background-color: transparent;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
+
 .navbar_btn a {
   color: #ffffff;
   font-size: 16px;
   line-height: 28px;
   font-weight: 500;
 }
+
 .navbar_btn:hover {
-  background-color: rgba(244, 246, 252, 0.2);
+  background-color: #F4F6FC33;
   border-color: transparent;
 }
+
 .navbar .burger_menu {
   position: relative;
   width: 24px;
   height: 24px;
   display: none;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .navbar .burger_menu span {
   width: 100%;
   height: 3px;
   background-color: #ffffff;
   border-radius: 3px;
-  transition: all 0.5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 footer {
@@ -113,93 +146,346 @@ footer {
 }
 
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 50px;
 }
+
 .footer_left {
   max-width: 510px;
   width: 100%;
 }
+
 .footer_left p {
   font-size: 16px;
   line-height: 28px;
   max-width: 400px;
   color: #ffffff;
-  opacity: 0.8;
+  opacity: .8;
   margin: 24px 0 80px 0;
 }
+
 .footer_card {
   width: 100%;
   background-color: #FCD980;
   padding: 18px 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .footer_card h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-size: 18px;
   line-height: 32px;
   color: #282938;
 }
+
 .footer_card h4 span {
   font-size: 16px;
   line-height: 28px;
-  opacity: 0.8;
+  opacity: .8;
   font-weight: 200;
 }
+
 .footer_right {
   max-width: 510px;
   width: 100%;
 }
+
 .footer_right h2 {
   font-size: 48px;
   line-height: 64px;
   color: #ffffff;
 }
+
 .footer_right p {
   font-size: 16px;
   max-width: 400px;
   color: #ffffff;
-  opacity: 0.8;
+  opacity: .8;
   font-weight: 4200;
   margin: 14px 0 28px 0;
 }
+
 .footer_icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 26px;
 }
+
 .footer_icon {
   width: 22px;
   height: 22px;
 }
 
+section {
+  width: 100%;
+  height: 200px;
+}
+
+section .sec-1 h1 {
+  width: 850px;
+  height: 150px;
+  margin: 0 auto;
+  font-size: 48px;
+}
+
+section .sec-1 h5 {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sec-2 {
+  width: 100%;
+  height: 750px;
+}
+
+.sec-2 h5 {
+  padding-top: 40px;
+  width: 670px;
+  height: 200px;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+}
+
+.sec-2 h4 {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: blue;
+  margin-top: -70px;
+}
+
+.sec-3 {
+  width: 100%;
+  height: 750px;
+}
+
+.sec-3 h1 {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sec-3 .sec-3-cards {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sec-3 .sec-3-cards .card-1 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.sec-3 .sec-3-cards .card-1 svg {
+  width: 100%;
+}
+
+.sec-3 .sec-3-cards .card-1 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.sec-3 .sec-3-cards .card-1 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
+.card-2 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.card-2 svg {
+  width: 100%;
+}
+
+.card-2 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.card-2 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
+.card-3 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.card-3 svg {
+  width: 100%;
+}
+
+.card-3 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.card-3 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
+.sec-4 {
+  width: 100%;
+  height: 600px;
+}
+
+.sec-4 .sec-4-cards {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: -100px;
+}
+
+.sec-4 .sec-4-cards .card-4 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.sec-4 .sec-4-cards .card-4 svg {
+  width: 100%;
+}
+
+.sec-4 .sec-4-cards .card-4 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.sec-4 .sec-4-cards .card-4 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
+.sec-4 .sec-4-cards .card-5 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.sec-4 .sec-4-cards .card-5 svg {
+  width: 100%;
+}
+
+.sec-4 .sec-4-cards .card-5 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.sec-4 .sec-4-cards .card-5 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
+.sec-4 .sec-4-cards .card-6 {
+  width: 335px;
+  height: 550px;
+  margin-top: 80px;
+}
+
+.sec-4 .sec-4-cards .card-6 svg {
+  width: 100%;
+}
+
+.sec-4 .sec-4-cards .card-6 h4 {
+  padding-top: 10px;
+  width: 280px;
+}
+
+.sec-4 .sec-4-cards .card-6 h5 {
+  padding-top: 20px;
+  width: 340px;
+}
+
 @media screen and (max-width: 1100px) {
   .footer {
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer_left {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .footer_left p {
     text-align: center;
   }
   .footer_right {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .footer_right p {
     text-align: center;
   }
 }
+
 @media screen and (max-width: 978px) {
   .navbar_items {
     gap: 24px;
@@ -208,40 +494,54 @@ footer {
     padding: 10px 32px;
   }
 }
+
 @media screen and (max-width: 768px) {
   .navbar_items {
     position: absolute;
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     height: calc(100vh - 92px);
     padding: 40px 20px;
     width: 60vw;
     top: 92px;
     right: 0;
-    background-color: rgba(0, 2, 56, 0.768627451);
+    background-color: #000238c4;
     -webkit-backdrop-filter: blur(4px);
             backdrop-filter: blur(4px);
-    transition: all 0.5s ease-in-out;
-    transform: translateX(100%);
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
   }
   .navbar_link {
     padding-left: 20px;
     font-size: 20px;
   }
   .navbar .burger_menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    transition: all 0.3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
   }
   .navbar_menu .navbar_items {
-    transform: translateX(0) !important;
+    -webkit-transform: translateX(0) !important;
+            transform: translateX(0) !important;
   }
   .navbar_menu .burger_menu__top {
     position: absolute;
-    transform: rotate(135deg) !important;
+    -webkit-transform: rotate(135deg) !important;
+            transform: rotate(135deg) !important;
   }
   .navbar_menu .burger_menu__center {
     position: absolute;
-    transform: rotate(-135deg) !important;
+    -webkit-transform: rotate(-135deg) !important;
+            transform: rotate(-135deg) !important;
   }
   .navbar_menu .burger_menu__bottom {
     display: none;
@@ -250,24 +550,32 @@ footer {
     font-size: 32px;
   }
 }
+
 @media screen and (max-width: 576px) {
   .navbar_items {
     width: 100vw;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .navbar_link {
     padding: 0;
   }
 }
+
 @media screen and (max-width: 480px) {
   .footer_card {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 32px;
   }
   .footer_card h4 {
     text-align: center;
   }
 }
+
 .btn_dark {
   padding: 14px 48px;
   font-size: 16px;
@@ -275,8 +583,10 @@ footer {
   border-radius: 40px;
   background-color: #282938;
   border: 1px solid transparent;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
+
 .btn_dark:hover {
   background-color: transparent;
   border-color: #282938;
@@ -290,8 +600,10 @@ footer {
   border-radius: 40px;
   background-color: #FCD980;
   border: 1px solid transparent;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
+
 .btn_yellow:hover {
   background-color: transparent;
   border-color: #FCD980;
@@ -305,8 +617,10 @@ footer {
   border-radius: 40px;
   background-color: #535460;
   border: 1px solid transparent;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
+
 .btn_light_black:hover {
   background-color: transparent;
   border-color: #535460;
@@ -320,10 +634,13 @@ footer {
   border-radius: 40px;
   background-color: #FDE4A6;
   border: 1px solid transparent;
-  transition: 0.3s;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
+
 .btn_light_yellow:hover {
   background-color: transparent;
   border-color: #FDE4A6;
   color: #FDE4A6;
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
